# ray-tracing

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  factorial.cpp  factorial.h  geometry.cpp  geometry.h  main.cpp
test/: .clang-tidy  tests.cpp
